--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🍂 Вороны Одина</title>
+    <title>Вороны Одина</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
     <div class="screen" id="startScreen">
         <div class="start-content">
-            <h1>🍂 Вороны Одина 🍂</h1>
-            <p>Испытай интуицию в мистическом лесу. Ворон принесёт тайну...</p>
+            <h1>Вороны Одина</h1>
+            <p>Испытай интуицию в мистическом лесу. Ворон принесет тайну...</p>
             <button class="btn" onclick="startGame()">Начать гадание</button>
         </div>
-        <div class="raven-decoration">🦅</div>
+        <div class="raven-decoration">RAVEN</div>
     </div>
 
     <div class="screen" id="gameScreen" style="display:none;">
@@ -25,12 +25,8 @@
         </div>
         <h2 id="cardName">...</h2>
         <p id="cardHint">Загрузка карты...</p>
-        <div class="fragments-grid" id="fragmentsGrid">
-            <!-- 3x3 сетка фрагментов создается в JS -->
-        </div>
-        <div class="answers" id="answersContainer">
-            <!-- Варианты ответов создаются в JS -->
-        </div>
+        <div class="fragments-grid" id="fragmentsGrid"></div>
+        <div class="answers" id="answersContainer"></div>
         <div id="resultPanel" style="display:none;">
             <h3 id="resultTitle"></h3>
             <p id="resultCorrectAnswer"></p>
